AR: implement outbox flow, customer endpoints, and tests
Made-with: Cursor