@@ -1,59 +1,96 @@
 package com.invoicegenie.ar.adapter.persistence.repository;
 
+import com.invoicegenie.ar.adapter.persistence.entity.CreditNoteEntity;
+import com.invoicegenie.ar.adapter.persistence.mapper.CreditNoteMapper;
 import com.invoicegenie.ar.domain.model.customer.CustomerId;
 import com.invoicegenie.ar.domain.model.payment.CreditNote;
 import com.invoicegenie.ar.domain.model.payment.CreditNoteRepository;
 import com.invoicegenie.shared.domain.TenantId;
 
 import jakarta.enterprise.context.ApplicationScoped;
-import java.util.ArrayList;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
-import java.util.stream.Collectors;
 
 /**
- * In-memory implementation of CreditNoteRepository for development.
+ * Driven adapter: implements CreditNoteRepository port using JPA.
+ * 
+ * <p>Enforces tenant isolation on all queries.
+ * <p>Credit note lifecycle: ISSUED → APPLIED (or EXPIRED/VOIDED)
  */
 @ApplicationScoped
 public class CreditNoteRepositoryAdapter implements CreditNoteRepository {
 
-    private final ConcurrentMap<UUID, List<CreditNote>> storage = new ConcurrentHashMap<>();
+    @PersistenceContext
+    EntityManager em;
+
+    private final CreditNoteMapper mapper = new CreditNoteMapper();
 
     @Override
+    @Transactional
     public void save(TenantId tenantId, CreditNote creditNote) {
-        List<CreditNote> creditNotes = storage.computeIfAbsent(tenantId.getValue(), k -> new ArrayList<>());
-        creditNotes.removeIf(c -> c.getId().equals(creditNote.getId()));
-        creditNotes.add(creditNote);
+        CreditNoteEntity entity = mapper.toEntity(tenantId, creditNote);
+        em.merge(entity);
     }
 
     @Override
     public Optional<CreditNote> findByTenantAndId(TenantId tenantId, UUID id) {
-        return storage.getOrDefault(tenantId.getValue(), List.of()).stream()
-                .filter(c -> c.getId().equals(id))
-                .findFirst();
+        CreditNoteEntity e = em.find(CreditNoteEntity.class, id);
+        if (e == null || !e.getTenantId().equals(tenantId.getValue())) {
+            return Optional.empty();
+        }
+        return Optional.of(mapper.toDomain(e));
     }
 
     @Override
     public List<CreditNote> findByTenantAndCustomer(TenantId tenantId, CustomerId customerId) {
-        return storage.getOrDefault(tenantId.getValue(), List.of()).stream()
-                .filter(c -> c.getCustomerId().equals(customerId))
-                .collect(Collectors.toList());
+        return em.createQuery(
+                        "SELECT c FROM CreditNoteEntity c WHERE c.tenantId = :tenantId AND c.customerId = :customerId",
+                        CreditNoteEntity.class)
+                .setParameter("tenantId", tenantId.getValue())
+                .setParameter("customerId", customerId.getValue())
+                .getResultStream()
+                .map(mapper::toDomain)
+                .toList();
     }
 
     @Override
     public List<CreditNote> findByTenantAndStatus(TenantId tenantId, CreditNote.CreditNoteStatus status) {
-        return storage.getOrDefault(tenantId.getValue(), List.of()).stream()
-                .filter(c -> c.getStatus() == status)
-                .collect(Collectors.toList());
+        CreditNoteEntity.CreditNoteStatus entityStatus = toEntityStatus(status);
+        return em.createQuery(
+                        "SELECT c FROM CreditNoteEntity c WHERE c.tenantId = :tenantId AND c.status = :status",
+                        CreditNoteEntity.class)
+                .setParameter("tenantId", tenantId.getValue())
+                .setParameter("status", entityStatus)
+                .getResultStream()
+                .map(mapper::toDomain)
+                .toList();
     }
 
     @Override
     public List<CreditNote> findAvailableByTenantAndCustomer(TenantId tenantId, CustomerId customerId) {
-        return storage.getOrDefault(tenantId.getValue(), List.of()).stream()
-                .filter(c -> c.getCustomerId().equals(customerId) && c.canApply())
-                .collect(Collectors.toList());
+        return em.createQuery(
+                        "SELECT c FROM CreditNoteEntity c WHERE c.tenantId = :tenantId AND c.customerId = :customerId " +
+                        "AND c.status = :status AND (c.expiryDate IS NULL OR c.expiryDate >= :today)",
+                        CreditNoteEntity.class)
+                .setParameter("tenantId", tenantId.getValue())
+                .setParameter("customerId", customerId.getValue())
+                .setParameter("status", CreditNoteEntity.CreditNoteStatus.ISSUED)
+                .setParameter("today", java.time.LocalDate.now())
+                .getResultStream()
+                .map(mapper::toDomain)
+                .toList();
+    }
+
+    private CreditNoteEntity.CreditNoteStatus toEntityStatus(CreditNote.CreditNoteStatus status) {
+        return switch (status) {
+            case ISSUED -> CreditNoteEntity.CreditNoteStatus.ISSUED;
+            case APPLIED -> CreditNoteEntity.CreditNoteStatus.APPLIED;
+            case EXPIRED -> CreditNoteEntity.CreditNoteStatus.EXPIRED;
+            case VOIDED -> CreditNoteEntity.CreditNoteStatus.VOIDED;
+        };
     }
 }
